@@ -3,9 +3,14 @@ FROM tomcat:9-jre11
 
 LABEL maintainer="Stefan Ziegler stefan.ziegler.de@gmail.com"
 
-ARG GEOSERVER_VERSION=2.20.1
+ENV CATALINA_HOME=/usr/local/tomcat
+ARG GEOSERVER_VERSION=2.23.2
 ENV GEOSERVER_DATA_DIR /usr/local/geoserver/data
 ENV GEOSERVER_INSTALL_DIR /usr/local/geoserver
+
+RUN set -x \
+    && apt-get update \
+    && apt-get install unzip
 
 # Uncomment to use APT cache (requires apt-cacher-ng on host)
 #RUN echo "Acquire::http { Proxy \"http://`/sbin/ip route|awk '/default/ { print $3 }'`:3142\"; };" > /etc/apt/apt.conf.d/71-apt-cacher-ng
@@ -32,6 +37,8 @@ RUN mkdir ${GEOSERVER_INSTALL_DIR} \
     && unzip geoserver.war \
     && rm -rf geoserver-${GEOSERVER_VERSION}-war.zip geoserver.war target *.txt
 
+RUN mv ${GEOSERVER_INSTALL_DIR}/WEB-INF/lib/marlin-*.jar $CATALINA_HOME/lib/marlin.jar
+
 # Replace default data directory
 #RUN mkdir -p /tmp/gs_tmp
 #ADD data_dir /tmp/gs_tmp
@@ -39,9 +46,9 @@ RUN mkdir ${GEOSERVER_INSTALL_DIR} \
 
 # GeoServer modules    
 RUN cd ${GEOSERVER_INSTALL_DIR}/WEB-INF/lib \
-    && wget http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip \
-    && unzip -o geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip \
-    && rm -rf geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip  \
+    # && wget http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip \
+    # && unzip -o geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip \
+    # && rm -rf geoserver-${GEOSERVER_VERSION}-monitor-plugin.zip  \
     && wget http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-control-flow-plugin.zip \
     && unzip -o geoserver-${GEOSERVER_VERSION}-control-flow-plugin.zip \
     && rm -rf geoserver-${GEOSERVER_VERSION}-control-flow-plugin.zip \
@@ -68,9 +75,21 @@ RUN sed -i '\:</web-app>:i\
     <url-pattern>/*</url-pattern>\n\
 </filter-mapping>' ${GEOSERVER_INSTALL_DIR}/WEB-INF/web.xml
 
+# Jndi 
+RUN cp ${GEOSERVER_INSTALL_DIR}/WEB-INF/lib/postgresql-42.6.0.jar $CATALINA_HOME/lib/postgresql-42.6.0.jar
+RUN rm ${GEOSERVER_INSTALL_DIR}/WEB-INF/lib/postgresql-42.6.0.jar 
+COPY context.xml $CATALINA_HOME/conf/context.xml
+
 # Tomcat environment
 ENV CATALINA_OPTS "-server -Djava.awt.headless=true \
-	-Xms2048m -Xmx2048m -XX:+UseConcMarkSweepGC -XX:NewSize=48m \
+    -Dfile.encoding=UTF-8 \
+    -Djavax.servlet.request.encoding=UTF-8 \
+    -Djavax.servlet.response.encoding=UTF-8 \
+    -D-XX:SoftRefLRUPolicyMSPerMB=36000 \
+	-Xms2048m -Xmx2048m \
+    -Xbootclasspath/a:$CATALINA_HOME/lib/marlin.jar \
+    -Dsun.java2d.renderer=sun.java2d.marlin.DMarlinRenderingEngine \
+    -Dorg.geotools.coverage.jaiext.enabled=true \
     -DGEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIR}"
 
 ADD start.sh /usr/local/bin/start.sh
